@@ -1,3 +1,7 @@
+Mar 6, 2007
+
+* Allow for single option without list
+
 Nov 23, 2006
 
 * Force start of line after ....
